# SQGLib

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SQGLib.code-workspace  SQGLib.ppj  vcpkg.json
cmake/: Plugin.h.in  Template.code-workspace.in  Template.ppj.in  tasks.json.in
data/: SQGLib.esp
data/DialogueViews/: 01008EFD.xml
data/SKSE/Plugins/SQGLib/: PF_SQGAcquirePackage.psc  PF_SQGActivatePackage.psc  PF_SQGTravelPackage.psc  SQGDebug.psc  SQGQuestTargetScript.psc  SQGTopicFragments.psc  TF_SQGDebug.psc
data/Seq/: SQGLib.seq
data/scripts/source/: PF_SQGAcquirePackage_0100694B.psc  PF_SQGActivatePackage_01007973.psc  PF_SQGGibierSamplePackage_010053C2.psc  PF_SQGTravelPackage.psc  QF_SQGEmptySample_01003E36.psc  QF_SQGSampleQuest2_01003371.psc  SQGDebug.psc  SQGLib.psc  SQGLibRegistrationScript.psc  SQGQuestTargetScript.psc  SQGTargetActivatorScript.psc  SQGTestActivator.psc  SQGTopicFragments.psc  TIF__01008F02.psc  TIF__01008F04.psc  TIF__0100B4C7.psc  TIF__0100B4D1.psc  Test.psc
includes/: DialogUtils.h  FormCreator.h  PCH.h  PackageUtils.h  SerializationUtils.h
includes/SQG/: QuestUtils.h
includes/SQG/API/: API.h  ConditionUtils.h  Data.h  DialogUtils.h  PackageUtils.h  QuestUtils.h  ScriptUtils.h
includes/Serialization/: API.h  FileSystem.h  FormRecord.h  FormRecordSerializer.h  FormSerializers.h  Model.h
src/: DialogUtils.cpp  FormCreator.cpp  FormCreator.hpp  PackageUtils.cpp  QuestUtils.cpp  SerializationUtils.cpp  main.cpp
src/API/: ConditionUtils.cpp  Data.cpp  DialogUtils.cpp  PackageUtils.cpp  QuestUtils.cpp  ScriptUtils.cpp
src/Engine/: Data.cpp  Data.h  Dialog.cpp  Dialog.h  Package.cpp  Package.h  Quest.cpp  Quest.h  Script.cpp  Script.h
src/Serialization/: API.cpp  FileSystem.cpp  FileSystem.hpp  FormCreator.cpp  FormRecord.cpp  FormRecordSerializer.hpp  FormSerializers.hpp  Model.cpp
